Suppression de tests, corrections majeures d'immuabilité dans les constructeurs des classes immuables contenant des listes.
Signed-off-by: Louis Dous Hervé <louisdousherve@gmail.com>